...
                android:background="@drawable/unselected_card"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="cursive"
...
                app:layout_constraintEnd_toEndOf="@+id/recipeName"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toStartOf="@+id/recipeName"
                app:layout_constraintTop_toBottomOf="@+id/recipeName" />

            <TextView
                android:id="@+id/servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:fontFamily="cursive"
                android:textColor="@color/colorPrimaryDark"
...
