<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_nav_home"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/step_nav"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/menu_nav_step"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ingredient_nav"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/menu_nav_gradient"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>