...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipeRecycleView"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
...
